hphp/test/zend/bad/ext-spl/dllist_012.php
<?php
$a = new SplDoublyLinkedList;
$a[] = $a;

var_dump($a);
?>
===DONE===